--- a/example_3/css/main.css
+++ b/example_3/css/main.css
@@ -227,6 +227,9 @@ ul, li{
 	text-decoration: none;
 	color: #949494;
 }
+.projec a:hover {
+	text-decoration: none;
+}
 .project{
 	padding-top: 80px;
 }
